# k-nn-image-classification

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
Documentation/: Hours.md  Implementation_document.md  Project_definition.md  Test_document.md  User_guide.md  Weekly_report_1.md  Weekly_report_2.md  Weekly_report_3.md  Weekly_report_4.md  Weekly_report_5.md  Weekly_report_6.md
src/: data.py  distance.py  knn.py  main.py  main_accuracy.py  prediction.py
src/gui/: main_window.py
src/gui/components/: mainwindow.py  mainwindow.ui
src/tests/: data_test.py  distance_test.py
