[tool.poetry]
name = "k-nn-image-classification"
version = "0.1.0"
description = ""
authors = ["ArttuLe <lehtonen.arttu@yahoo.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
