[tool.poetry]
name = "k-nn-image-classification"
version = "0.1.0"
description = ""
authors = ["ArttuLe <lehtonen.arttu@yahoo.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
numpy = "^1.22.1"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
PyQt5 = "^5.15.6"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
